Fix minimap rendering. Add proper rotated square minimap rendering